Fixing the background color so it stretches the width of the mobile device.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+    max-width: 100vw;
     min-width: 375px;
     height: 100%;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(139, 139, 137));
